# mininumpy

./: README.md  main.py  pyproject.toml  requirements_dev.txt
mininumpy/: __init__.py  array.py  core.py  utils.py
programming/project/: .gitignore  README.md  main.py  pyproject.toml  requirements_dev.txt
programming/project/mininumpy/: .array.py.swp  __init__.py  array.py  core.py
tests/: test_run.py
