[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mininumpy"
version = "0.0.1"
authors = [
  { name="Santiago Suárez", email="santiago.suarezpungitore@gmail.com" },
]
description = "A small version of NumPy for university purposes"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"

# dependencies = []

[project.optional-dependencies]
dev = [
	"ruff==0.13.3",
	"ipython==9.6.0",
	"ipdb==0.13.13",
]
test = [
	"pytest==8.4.2",
	"numpy==2.4.3",
]

[project.urls]
Homepage = "https://github.com/Bear-Witness-98/mininumpy"
Issues = "https://github.com/Bear-Witness-98/mininumpy/issues"


[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # remove unused imports for init file
]
